Set up jQuery and ran JS

--- a/index.html
+++ b/index.html
@@ -14,14 +14,26 @@
     <title>Project 3: Ride the Wave</title>
 </head>
 <body>
+    <main>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
-
-
-
-
-
-
-
     <!-- JQuery here -->
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="./script.js"></script>
+    
 </body>
 </html>
