--- a/index.html
+++ b/index.html
@@ -15,7 +15,47 @@
 </head>
 <body>
     <main>
+        <section class="main">
+            <div class="mainContainer">
+                <div class="welcome">
+                    <h1>Ride the Wave</h1>
+                    <span>Let's discover your a e s t h e t i c.</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="questionsContainer">
+            <div class="question question1"></div>
+            <div class="question question2"></div>
+            <div class="question question3"></div>
+            <div class="question question4"></div>
+            <div class="question question5"></div>
+        </section>
+
+        <section class="resultContainer">
+            <h2>
+                <!-- DYNAMIC -->
+            </h2>
+
+            <img src="" alt=""> <!--(dynamic)-->
+            <img src="" alt=""><!--(dynamic)-->
+            <!-- use this keyword -->
+        </section>
+        <!-- this section will most likely be dynamic and set up using jQ -->
+
+
+
+
+
+
+
+
+
+
     </main>
+    <footer>
+        <p class="bottom">Copyright Afua Deborah 2020</p>
+    </footer>
 
 
 
