--- a/index.html
+++ b/index.html
@@ -13,46 +13,77 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>Project 3: Ride the Wave</title>
 </head>
+<header>
+    <div class="headerContainer">
+        <div class="welcome">
+            <h1>Ride the Wave</h1>
+            <span>Let's discover your a e s t h e t i c.</span>
+        </div>
+        <button class="begin">Let's Begin</button>
+        <!-- on click scroll down/display first question -->
+    </div>
+</header>
+
 <body>
     <main>
-        <section class="main">
-            <div class="mainContainer">
-                <div class="welcome">
-                    <h1>Ride the Wave</h1>
-                    <span>Let's discover your a e s t h e t i c.</span>
-                </div>
-            </div>
-        </section>
+    <section class="questionsContainer">
+        <!-- Delegate events here -->
+        <div class="question question1">
+            <ul class="selectionContainer">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="question">
+            <ul class="selectionContainer">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="question">
+            <ul class="selectionContainer">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="question">
+            <ul class="selectionContainer">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="question">
+            <ul class="selectionContainer">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </section>
 
-        <section class="questionsContainer">
-            <div class="question question1"></div>
-            <div class="question question2"></div>
-            <div class="question question3"></div>
-            <div class="question question4"></div>
-            <div class="question question5"></div>
-        </section>
-
-        <section class="resultContainer">
+    <section class="result">
+        <div class="resultContainer">
             <h2>
                 <!-- DYNAMIC -->
             </h2>
 
             <img src="" alt=""> <!--(dynamic)-->
             <img src="" alt=""><!--(dynamic)-->
-            <!-- use this keyword -->
-        </section>
-        <!-- this section will most likely be dynamic and set up using jQ -->
-
-
-
-
-
-
-
-
-
-
+        </div>
+        <!-- use this keyword -->
+        <button class="restart">Ride the Wave Again</button>
+    </section>
+    <!-- this section will most likely be dynamic and set up using jQ -->
+<!-- change: 
+    background-color
+    color
+    border -->
     </main>
+
     <footer>
         <p class="bottom">Copyright Afua Deborah 2020</p>
     </footer>
