--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <!-- Favicon -->
     <link rel="stylesheet" href="">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="">
+    <script src="https://kit.fontawesome.com/813177f008.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Project 3: Ride the Wave</title>
 </head>
 <header>
-    <div class="headerContainer">
+    <div class="headerContainer wrapper">
         <div class="welcome">
             <h1>Ride the Wave</h1>
             <span>Let's discover your a e s t h e t i c.</span>
@@ -26,46 +26,49 @@
 
 <body>
     <main>
-    <section class="questionsContainer">
-        <!-- Delegate events here -->
+    <section class="questionsContainer wrapper">
         <div class="question question1">
             <ul class="selectionContainer">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="selection vaporSelection"></li>
+                <li class="selection grungeSelection"></li>
+                <li class="selection"></li>
             </ul>
         </div>
-        <div class="question">
+
+        <div class="question question2">
             <ul class="selectionContainer">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="selection grungeSelection"></li>
+                <li class="selection vaporSelection"></li>
+                <li class="selection pastelSelection"></li>
             </ul>
         </div>
-        <div class="question">
+
+        <div class="question question3">
             <ul class="selectionContainer">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="selection vaporSelection"></li>
+                <li class="selection pastelSelection"></li>
+                <li class="selection grungeSelection"></li>
             </ul>
         </div>
-        <div class="question">
+
+        <div class="question question4">
             <ul class="selectionContainer">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="selection pastelSelection"></li>
+                <li class="selection grungeSelection"></li>
+                <li class="selection vaporSelection"></li>
             </ul>
         </div>
-        <div class="question">
+
+        <div class="question question5">
             <ul class="selectionContainer">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li class="selection grungeSelection"></li>
+                <li class="selection vaporSelection"></li>
+                <li class="selection pastelSelection"></li>
             </ul>
         </div>
     </section>
 
-    <section class="result">
+    <section class="result wrapper">
         <div class="resultContainer">
             <h2>
                 <!-- DYNAMIC -->
@@ -84,7 +87,7 @@
     border -->
     </main>
 
-    <footer>
+    <footer class="wrapper">
         <p class="bottom">Copyright Afua Deborah 2020</p>
     </footer>
 
