--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>Project 3: Ride the Wave</title>
 </head>
+
 <header>
-    <div class="headerContainer wrapper">
-        <div class="welcome">
-            <h1>Ride the Wave</h1>
-            <span>Let's discover your a e s t h e t i c.</span>
-        </div>
-        <button class="begin">Let's Begin</button>
-        <!-- on click scroll down/display first question -->
+    <div class="welcome wrapper">
+        <h1>Ride the Wave</h1>
+        <span>Let's discover your a e s t h e t i c.</span>
+        <form action="#" class="createUser">
+            <input type="text" name="userWaveName" 
+            id="waveName" placeholder="e n t e r your wavename">
+            <button class="begin">Let's Begin</button>
+        </form>
+        <!-- form is more semantic? -->
     </div>
 </header>
+<!-- on click scroll down/display first question -->
 
 <body>
     <main>
