--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Favicon -->
-    <link rel="stylesheet" href="">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/813177f008.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Project 3: Ride the Wave</title>
 </head>
 
-<header>
-    <div class="welcome wrapper">
+<header class="wrapper">
+    <!-- grid this header, flex the children? -->
+    <div class="welcome">
         <h1>Ride the Wave</h1>
-        <span>Let's discover your a e s t h e t i c.</span>
+        <span>Discover your a e s t h e t i c.</span>
         <form action="#" class="createUser">
             <input type="text" name="userWaveName" 
             id="waveName" placeholder="e n t e r your wavename">
             <button class="begin">Let's Begin</button>
         </form>
         <!-- form is more semantic? -->
+        <div class="letsGo">
+
+        </div>
+        <!-- go across the screen above the first question -->
+
     </div>
 </header>
 <!-- on click scroll down/display first question -->
