--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
     <main>
     <section class="questionsContainer wrapper">
         <div class="question question1">
+            <h2>What is question1?</h2>
             <ul class="selectionContainer">
-                <li class="selection vaporSelection"></li>
-                <li class="selection grungeSelection"></li>
-                <li class="selection"></li>
+                <li class="selection vaporSelection">Vapor</li>
+                <li class="selection grungeSelection">Grunge</li>
+                <li class="selection">Pastel</li>
             </ul>
         </div>
 
