Fixed up HTML, finished JS intro

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Project 3: Ride the Wave</title>
 </head>
 
-<header class="wrapper">
+<header>
     <!-- grid this header, flex the children? -->
     <div class="welcome">
         <h1>Ride the Wave</h1>
@@ -37,45 +37,14 @@
 <body>
     <main>
     <section class="questionsContainer wrapper">
-        <div class="question question1">
-            <h2>What is question1?</h2>
+        <div class="question">
+            <h2 id="writeQuestion"></h2>
             <ul class="selectionContainer">
-                <li class="selection vaporSelection">Vapor</li>
-                <li class="selection grungeSelection">Grunge</li>
-                <li class="selection">Pastel</li>
+                <li class="selection">cool</li>
+                <li class="selection">cooler</li>
+                <li class="selection">coolest</li>
             </ul>
-        </div>
-
-        <div class="question question2">
-            <ul class="selectionContainer">
-                <li class="selection grungeSelection"></li>
-                <li class="selection vaporSelection"></li>
-                <li class="selection pastelSelection"></li>
-            </ul>
-        </div>
-
-        <div class="question question3">
-            <ul class="selectionContainer">
-                <li class="selection vaporSelection"></li>
-                <li class="selection pastelSelection"></li>
-                <li class="selection grungeSelection"></li>
-            </ul>
-        </div>
-
-        <div class="question question4">
-            <ul class="selectionContainer">
-                <li class="selection pastelSelection"></li>
-                <li class="selection grungeSelection"></li>
-                <li class="selection vaporSelection"></li>
-            </ul>
-        </div>
-
-        <div class="question question5">
-            <ul class="selectionContainer">
-                <li class="selection grungeSelection"></li>
-                <li class="selection vaporSelection"></li>
-                <li class="selection pastelSelection"></li>
-            </ul>
+            <button class="nextQuestion">Next</button>
         </div>
     </section>
 
