--- a/index.html
+++ b/index.html
@@ -37,22 +37,64 @@
 <body>
     <main>
     <section class="questionsContainer wrapper">
-        <div class="question">
-            <h2 id="writeQuestion"></h2>
+        <div class="question" id= "question1">
+            <h2> Write question here</h2>
             <ul class="selectionContainer">
-                <li class="selection">cool</li>
-                <li class="selection">cooler</li>
-                <li class="selection">coolest</li>
+                <li class="selection">
+                    <input type="radio" name="quest1" value="vapor">
+                </li>
+                <li class="selection ">
+                    <input type="radio" name="quest1" value="grunge">
+                </li>
+                <li class="selection pastel">
+                    <input type="radio" name="quest1" value="pastel">
+                </li>
             </ul>
-            <button class="nextQuestion">Next</button>
         </div>
+
+        <!-- <div class="question" id= "question2">
+            <h2> Write question here</h2>
+            <ul class="selectionContainer">
+                <li class="selection grunge">cool</li>
+                <li class="selection vapor">cooler</li>
+                <li class="selection pastel">coolest</li>
+            </ul>
+        </div>
+
+        <div class="question" id= "question3">
+            <h2> Write question here</h2>
+            <ul class="selectionContainer">
+                <li class="selection vapor">cool</li>
+                <li class="selection pastel">cooler</li>
+                <li class="selection grunge">coolest</li>
+            </ul>
+        </div>
+
+        <div class="question" id= "question4">
+            <h2> Write question here</h2>
+            <ul class="selectionContainer">
+                <li class="selection" id="pastel">cool</li>
+                <li class="selection" id="grunge">cooler</li>
+                <li class="selection" id="vapor">coolest</li>
+            </ul>
+        </div>
+
+        <div class="question" id="question5">
+            <h2> Write question here</h2>
+            <ul class="selectionContainer">
+                <li class="selection" id="grunge">cool</li>
+                <li class="selection" id="vapor">cooler</li>
+                <li class="selection" id="pastel">coolest</li>
+            </ul>
+        </div> -->
+        
     </section>
 
     <section class="result wrapper">
         <div class="resultContainer">
-            <h2>
+            <h3>
                 <!-- DYNAMIC -->
-            </h2>
+            </h3>
 
             <img src="" alt=""> <!--(dynamic)-->
             <img src="" alt=""><!--(dynamic)-->
