Redid HTML and JS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form action="#" class="createUser">
             <input type="text" name="userWaveName" 
             id="waveName" placeholder="e n t e r your wavename">
-            <button class="begin">Let's Begin</button>
+            <button class="begin">Let's Begin!</button>
         </form>
         <!-- form is more semantic? -->
         <div class="letsGo">
@@ -38,56 +38,50 @@
     <main>
     <section class="questionsContainer wrapper">
         <div class="question" id= "question1">
-            <h2> Write question here</h2>
-            <ul class="selectionContainer">
-                <li class="selection">
-                    <input type="radio" name="quest1" value="vapor">
-                </li>
-                <li class="selection ">
-                    <input type="radio" name="quest1" value="grunge">
-                </li>
-                <li class="selection pastel">
-                    <input type="radio" name="quest1" value="pastel">
-                </li>
-            </ul>
+            <h2>Question 1</h2>
+            <form action="">
+                <input type="radio" name="quest1" value="vapor"> Answer 1</input>
+                <input type="radio" name="quest1" value="grunge">Answer 2 MAYBE PUT IMAGES HERE</input>
+                <input type="radio" name="quest1" value="pastel">Answer 3</input>
+            </form>
         </div>
+        <!-- manually randomize the values and push them into an empty array -->
 
-        <!-- <div class="question" id= "question2">
+        <div class="question" id= "question2">
             <h2> Write question here</h2>
-            <ul class="selectionContainer">
-                <li class="selection grunge">cool</li>
-                <li class="selection vapor">cooler</li>
-                <li class="selection pastel">coolest</li>
-            </ul>
+            <form action="">
+                <input type="radio" name="quest2" value="grunge"> Answer 1</input>
+                <input type="radio" name="quest2" value="vapor"></input>
+                <input type="radio" name="quest2" value="pastel"></input>
+            </form>
         </div>
 
         <div class="question" id= "question3">
             <h2> Write question here</h2>
-            <ul class="selectionContainer">
-                <li class="selection vapor">cool</li>
-                <li class="selection pastel">cooler</li>
-                <li class="selection grunge">coolest</li>
-            </ul>
+            <form action="">
+                <input type="radio" name="quest3" value="vapor"> Answer 1</input>
+                <input type="radio" name="quest3" value="pastel"></input>
+                <input type="radio" name="quest3" value="grunge"></input>
+            </form>
         </div>
 
         <div class="question" id= "question4">
             <h2> Write question here</h2>
-            <ul class="selectionContainer">
-                <li class="selection" id="pastel">cool</li>
-                <li class="selection" id="grunge">cooler</li>
-                <li class="selection" id="vapor">coolest</li>
-            </ul>
+            <form action="">
+                <input type="radio" name="quest4" value="pastel"> Answer 1</input>
+                <input type="radio" name="quest4" value="grunge"></input>
+                <input type="radio" name="quest4" value="vapor"></input>
+            </form>
         </div>
 
         <div class="question" id="question5">
             <h2> Write question here</h2>
-            <ul class="selectionContainer">
-                <li class="selection" id="grunge">cool</li>
-                <li class="selection" id="vapor">cooler</li>
-                <li class="selection" id="pastel">coolest</li>
-            </ul>
-        </div> -->
-        
+            <form action="">
+                <input type="radio" name="quest5" value="grunge"> Answer 1</input>
+                <input type="radio" name="quest5" value="vapor"></input>
+                <input type="radio" name="quest5" value="grunge"></input>
+            </form>
+        </div>
     </section>
 
     <section class="result wrapper">
