--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/813177f008.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link rel="stylesheet" href="./styles/style.css">
     <title>Project 3: Ride the Wave</title>
@@ -16,7 +14,7 @@
 
     <!-- grid this header, flex the children? -->
 <header>
-    <div class="welcome">
+    <div class="welcome wrapper">
         <h1>Ride the Wave</h1>
         <span>What's your a e s t h e t i c?</span>
         <form action="">
@@ -30,7 +28,9 @@
 </header>
     
 <body>
-    <div class="question">
+    <!-- grid the main section and flex inner items -->
+    <!-- add a wrapper -->
+    <div class="question wrapper">
         <h2></h2>
         <form action="" class="questionBox">
 
@@ -40,7 +40,7 @@
         <button class="next">Next</button>
     </div>
 
-    <div class="result">
+    <div class="result wrapper">
 
         
     </div>
@@ -61,3 +61,4 @@
 <!-------- Credits ---------->
 <!-- Lots of credit to this codepen: https://codepen.io/rashidnaushad/pen/VaKMBJ?editors=1010 for help solidify concepts and
 devise a flow! -->
+<!-- Shoutout to Lucas N for assistance with my categories! The realest  -->
