Finally used CSS grid, header formatting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Revalia|Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Project 3: Ride the Wave</title>
 </head>
@@ -15,8 +16,10 @@
     <!-- grid this header, flex the children? -->
 <header>
     <div class="welcome wrapper">
-        <h1>Ride the Wave</h1>
-        <span>What's your a e s t h e t i c?</span>
+        <div class="title">
+            <h1>Ride the Wave</h1>
+            <span>What's your a e s t h e t i c?</span>
+        </div>
         <form action="">
             <input type="text" name="" id="waveName" placeholder="e n t e r your name here">
             <input type="submit" id="startWave" value="Let's Go">
@@ -29,7 +32,7 @@
     
 <body>
     <!-- grid the main section and flex inner items -->
-    <!-- add a wrapper -->
+
     <div class="question wrapper">
         <h2></h2>
         <form action="" class="questionBox">
@@ -61,4 +64,4 @@
 <!-------- Credits ---------->
 <!-- Lots of credit to this codepen: https://codepen.io/rashidnaushad/pen/VaKMBJ?editors=1010 for help solidify concepts and
 devise a flow! -->
-<!-- Shoutout to Lucas N for assistance with my categories! The realest  -->
+<!-- Shoutout to Lucas N for assistance with my categories! The realest! -->
