--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Archivo|Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Code+Pro&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles/style.css">
     <title>Ride the Wave</title>
 </head>
@@ -19,7 +19,7 @@
             <h1>Ride the Wave</h1>
             <span>What's your a e s t h e t i c?</span>
         <form action="">
-            <input type="text" name="" id="waveName" placeholder="e n t e r your name">
+            <input type="text" name="" id="waveName" placeholder="e n t e r n a m e">
             <input type="submit" id="startWave" value="Let's Go">
         </form>
         <div class="letsGo">
