We are accessible

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <header>
     <div class="welcome wrapper">
-            <h1>Ride the Wave</h1>
-            <span>What's your a e s t h e t i c?</span>
+            <h1 tabindex="0">Ride the Wave</h1>
+            <span tabindex="0">What's your a e s t h e t i c?</span>
         <form action="">
             <input type="text" name="" id="waveName" placeholder="e n t e r n a m e">
             <input type="submit" id="startWave" value="Let's Go">
         </form>
-        <div class="letsGo">
+        <div class="letsGo" role="status">
             <!-- add here -->
         </div>
     </div>
@@ -32,8 +32,8 @@
     <!-- grid the main section and flex inner items -->
 
     <div class="question wrapper">
-        <h2></h2>
-        <form action="" class="questionBox">
+        <h2 tabindex="0" role="status"></h2>
+        <form action="" class="questionBox" role="status">
 
 
         </form>
@@ -41,7 +41,7 @@
         <button class="next">Next</button>
     </div>
 
-    <div class="result">
+    <div class="result" role="status">
 
         
     </div>
