Tweaked JS and variables

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 <body>
     <div class="wrapper">
         <section class="question">
-            <h2 tabindex="0" role="status"></h2>
-            <form action="" class="questionBox" role="status">
-            </form>
+            <h2 tabindex="0"></h2>
+            <form action="" class="questionBox">
 
+            </form>
             <button class="next">Next</button>
         </section>
 
 
-        <section class="result" role="status">
+        <section class="result">
 
             
             <button class="redo">Ride the Wave Again</button>
