Start Over button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Results added dynamically here -->
             
         </section>
-        <button class="redo">Ride the Wave Again</button>
+        <button class="redo">Start Over</button>
 
     </div>
     
